# lambda_layer_whitelisting

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
lambda_layer_whitelisting/: lambda_layer_permission.py
layer_whitelisting/: lambda_layer_permission.py
tests/: __init__.py  test_instantiate_lambda_client.py
