[tool.poetry]
name = "lambda_layer_whitelisting"
version = "0.1.0"
description = "A tool for whitelisting your customer's AWS accounts towards your AWS lambda layers."
authors = ["Karl Dagenais <karl.dagenais@broadsign.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.12.39"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
